Change log for Stellar Mayhem


Broke out various method implementations from PlayViewBase.cpp to 
PlayViewBaseXXX.cpp files. Some functions were generic enough to 
be moved to the DaylonGraphicsLibrary plugin.


Version 1.8.5
-------------------------------------------------------------------------------------
Big enemy ships improve their aim over time, but take longer to do so
than the small enemy ships. Small enemy ships also start with poor aim 
against the player ship.

Replaced several constant literals with named global constant vars.

Removed several unnecessary todo comments.

Moved local const FParticlesParams declarations to constants.h.

Moved FAnimSpriteCel from game to plugin.
Replaced FAnimSpriteCel::Arena with delegate so that 
UPlayViewBase takes care of making torpedo sounds during intro screen, 
and FAnimSpriteCel can be generic.

IArena sprite atlas getters return const FDaylonSpriteAtlas& instead of 
UDaylonSpriteWidgetAtlas*, since the latter was just a thin wrapper 
around the former. IArena users don't need to know about UDaylonSpriteWidgetAtlas.

Replaced IArena& arguments to play object methods and their collections' methods
with an IArena* class member which is initialized after object creation, 
so the calling code is less verbose.

Moved SDaylonLineParticles code to its own files.

Explosion spawn parameters consolidated into FDaylonParticlesParams, 
spawn callers now use mostly static const vars of that type.
Same for shield explosions.


Version 1.8.4
-------------------------------------------------------------------------------------
Refactored the various helper classes to use IArena instead of UPlayViewBase, 
so that they don't depend on any particular implementation of the game, 
and UPlayViewBase doesn't have to make the helpers friends or declare needed 
members public.


Version 1.8.3
-------------------------------------------------------------------------------------